# gobject-sys

./: Cargo.toml  README.md  build.rs  gobject-sys.tmpl  lib.rs
src/: lib.rs
