[project]

name = "gobject-2_0-sys"
version = "0.2.0"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
description = "Import crate for GObject"
license = "LGPL-2.1+"
readme = "README.md"
keywords = ["GObject", "GLib", "GNOME"]

repository = "https://github.com/gi-rust/gobject-sys.git"

build = "build.rs"
links = "gobject-2.0"

[lib]
path = "lib.rs"

[dependencies]
gtypes = "0.1"
glib-2_0-sys = "0.2"

[build-dependencies]
pkg-config = "0.3"
